<resources>
    <string name="app_name">EvernoteClient</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">EvernoteClient</string>
    <string name="message_logged_successfully" >Logged In Correctly</string>
    <string name="add_note">Add Note</string>
    <string name="title_activity_create_note">Create Note</string>

    <string name="hello_world">Hello world!</string>
    <string name="accept">Accept</string>
    <string name="placeholder_new_note_title">Title your note</string>
    <string name="placeholder_note_text">Simply start typing...</string>
    <string name="label_notebook">Notebook</string>
    <string name="title_activity_read_note">ReadNote</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="creation">Creation</string>
    <string name="organize">Organize</string>
    <string name="message_loading">\"Loading. Please wait...\"</string>
    <string name="empty_title">Can\'t create a note with empty title.</string>
    <string name="title_activity_create_note_ocr">CreateNoteOcr</string>
    <string name="clean">Clean</string>
    <string name="add_note_ocr">Add Note OCR</string>
</resources>
